bug: fix intro not wrapping on small

--- a/src/style.css
+++ b/src/style.css
@@ -44,7 +44,7 @@ header {
     font-size: 5rem;
     margin: 0;
     padding: 0;
-    white-space: normal;
+
 
 }
 
@@ -52,7 +52,6 @@ header {
 @media (max-width: 768px) {
     #intro-text {
         font-size: 1rem;
-        white-space: nowrap;
     }
 }
 
